--- a/main.mustache
+++ b/main.mustache
@@ -2,59 +2,58 @@
 <p>
    I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
    <img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
-<h3><img src="https://i.imgur.com/HFHIBmx.png" width="15" /> 𝗣𝗶𝗰𝘀 𝗳𝗿𝗼𝗺 <img src="https://i.imgur.com/DPngeUJ.png" width="11" /> 𝗟𝗼𝗻𝗱𝗼𝗻 </h3>
+<h3><img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Pics from <img src="https://i.imgur.com/DPngeUJ.png" width="11" /> London </h3>
 <p><img width="200" src="{{img1}}" /> <img width="200" src="{{img2}}" /> <img width="200" src="{{img3}}" /></p>
 <p> Above are the last 3 pictures posted by
    <a href="https://www.instagram.com/london4visit/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" width="13" /> @london4visit</a>
    <br /> Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i></b>
    <br /> Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>. 
 </p>
-<h3><img src="https://i.imgur.com/aSVPWXc.png" width="15" /> 𝗦𝗽𝗼𝘁𝗶𝗳𝘆 𝗣𝗹𝗮𝘆𝗶𝗻𝗴 </h3>
+<h3><img src="https://i.imgur.com/aSVPWXc.png" width="15" /> Spotify Playing </h3>
 <a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6"><img src="https://spotify-playing-now-readme-8u5laga6k-dipanspotify.vercel.app/api/now-playing.svg" width="490" alt="Spotify" /></a>
-<h3><img src="https://i.imgur.com/84QPnNl.png" width="15" /> 𝗠𝘆 𝗦𝘁𝗮𝘁𝘀 </h3>
+<h3><img src="https://i.imgur.com/84QPnNl.png" width="15" /> My Stats </h3>
 <img src="https://github-stats-6sata0uvx-dipanspotify.vercel.app/api?username=themagicalmammal&amp;include_all_commits=true&amp;bg_color=30,e96443,904e95&amp;title_color=fff&amp;text_color=fff" alt="Dipan&#39;s GitHub stats" />
-<h3><img src="https://i.imgur.com/yQHTmCW.png" width="15" /> 𝗪𝗵𝗲𝗿𝗲 𝘁𝗼 𝗳𝗶𝗻𝗱 𝗺𝗲 </h3>
-<a href="https://github.com/themagicalmammal/"> <img alt="Github" width="40px" src="https://i.imgur.com/RjscN2M.png" /></a>
-<a href="https://gist.github.com/themagicalmammal/"> <img alt="Gist" width="40px" src="https://i.imgur.com/6w4HNmL.png" /></a>
-<a href="https://pypi.org/user/themagicalmammal/"> <img alt="Pypi" width="40px" src="https://i.imgur.com/901ps8h.png" /></a>
-<a href="https://uk.linkedin.com/in/themagicalmammal/"> <img alt="Linkedin" width="40px" src="https://i.imgur.com/Hp2w5wM.png" /></a>
-<a href="https://www.reddit.com/user/themagicalmammal/"> <img alt="Reddit" width="40px" src="https://i.imgur.com/E8vTLyb.png" /></a>
-<a href="https://telegram.im/@themagicalmammal"> <img alt="Telegram" width="40px" src="https://i.imgur.com/8uCq4fi.png" /> </a>
-<a href="https://www.kaggle.com/themagicalmammal"> <img alt="Kaggle" width="40px" src="https://i.imgur.com/6XAnA1Y.png" /></a>
-<a href="https://forum.xda-developers.com/m/themagicalmammal.9670192/"> <img alt="XDA" width="40px" src="https://i.imgur.com/ZkDQREa.png" /></a>
-<a href="https://www.coursera.org/user/ccc24c4adb1726e9cbdef303b15cdbcf"> <img alt="Coursera" width="40px" src="https://i.imgur.com/bxjrGF3.png" /></a>
-<a href="https://www.sololearn.com/profile/4562055"> <img alt="Sololearn" width="40px" src="https://i.imgur.com/6mnh2V5.png" /></a>
-<a href="https://www.quora.com/profile/Dipan-Nanda"> <img alt="Quora" width="40px" src="https://i.imgur.com/4fFA2aO.png" /> </a>
-<a href="https://dsc.bio/themagicalmammal"> <img alt="Discord" width="40px" src="https://i.imgur.com/allk32s.png" /></a>
-<a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6?si=i5kyqZQOQmOu_NRn-T7FQw&nd=1"> <img alt="Spotify" width="40px" src="https://i.imgur.com/TuGJlcZ.png" /> </a>
-<a href="https://www.deviantart.com/themagicalmammal"> <img alt="Devintart" width="40px" src="https://i.imgur.com/YWUKoPE.png" /></a>
-<a href="https://myanimelist.net/profile/themagicalmammal"> <img alt="MAL" width="40px" src="https://i.imgur.com/TnZcuA4.png" /></a>
-<a href="https://medium.com/@d19cyber"> <img alt="Medium" width="40px" src="https://i.imgur.com/HvRIk6L.png" /></a>
-<a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="40px" src="https://i.imgur.com/PNhxaKM.png" /></a>
+<h3><img src="https://i.imgur.com/yQHTmCW.png" width="15" /> Where to find me </h3>
+<a href="https://gist.github.com/themagicalmammal/"> <img alt="Gist" width="48px" src="https://i.imgur.com/6w4HNmL.png" /></a>
+<a href="https://pypi.org/user/themagicalmammal/"> <img alt="Pypi" width="48px" src="https://i.imgur.com/901ps8h.png" /></a>
+<a href="https://uk.linkedin.com/in/themagicalmammal/"> <img alt="Linkedin" width="48px" src="https://i.imgur.com/Hp2w5wM.png" /></a>
+<a href="https://www.reddit.com/user/themagicalmammal/"> <img alt="Reddit" width="48px" src="https://i.imgur.com/E8vTLyb.png" /></a>
+<a href="https://telegram.im/@themagicalmammal"> <img alt="Telegram" width="48px" src="https://i.imgur.com/8uCq4fi.png" /> </a>
+<a href="https://www.kaggle.com/themagicalmammal"> <img alt="Kaggle" width="48px" src="https://i.imgur.com/6XAnA1Y.png" /></a>
+<a href="https://forum.xda-developers.com/m/themagicalmammal.9670192/"> <img alt="XDA" width="48px" src="https://i.imgur.com/ZkDQREa.png" /></a>
+<a href="https://www.coursera.org/user/ccc24c4adb1726e9cbdef303b15cdbcf"> <img alt="Coursera" width="48px" src="https://i.imgur.com/bxjrGF3.png" /></a>
+<a href="https://www.sololearn.com/profile/4562055"> <img alt="Sololearn" width="48px" src="https://i.imgur.com/6mnh2V5.png" /></a>
+<a href="https://www.quora.com/profile/Dipan-Nanda"> <img alt="Quora" width="48px" src="https://i.imgur.com/4fFA2aO.png" /> </a>
+<a href="https://dsc.bio/themagicalmammal"> <img alt="Discord" width="48px" src="https://i.imgur.com/allk32s.png" /></a>
+<a href="https://open.spotify.com/user/88h9x52o4rver6y7ka9upj5a6?si=i5kyqZQOQmOu_NRn-T7FQw&nd=1"> <img alt="Spotify" width="48px" src="https://i.imgur.com/TuGJlcZ.png" /> </a>
+<a href="https://www.deviantart.com/themagicalmammal"> <img alt="Devintart" width="48px" src="https://i.imgur.com/YWUKoPE.png" /></a>
+<a href="https://myanimelist.net/profile/themagicalmammal"> <img alt="MAL" width="48px" src="https://i.imgur.com/TnZcuA4.png" /></a>
+<a href="https://medium.com/@d19cyber"> <img alt="Medium" width="48px" src="https://i.imgur.com/HvRIk6L.png" /></a>
+<a href="https://secure.plum.io/p/2Ui2Qr0KSS7QP04pEq_-BQ"> <img alt="Plum" width="48px" src="https://i.imgur.com/PNhxaKM.png" /></a>
 <br />
 <details>
    <summary> &#9655;</summary>
-   <h3><img src="https://cdn-icons-png.flaticon.com/512/4257/4257487.png" width="15" /> 𝗧𝗲𝗰𝗵 𝗦𝘁𝗮𝗰𝗸 </h3>
+   <h3><img src="https://cdn-icons-png.flaticon.com/512/4257/4257487.png" width="15" /> Tech Stack </h3>
    <img src="https://skillicons.dev/icons?i=py,django,html,css,js,r,php,pytorch,latex,linux,powershell,md,rails,bash,github,git,githubactions,visualstudio,flask,angular,atom,cpp,heroku,firebase,sqlite,mysql,aws,gcp,cassandra,docker" />
    <br />
    <details>
       <summary> &#9655;</summary>
-      <h3><img src="https://i.imgur.com/x8tsLuE.png" width="15" /> 𝗧𝗿𝗼𝗽𝗵𝗶𝗲𝘀 </h3>
+      <h3><img src="https://i.imgur.com/x8tsLuE.png" width="15" /> Trophies </h3>
       <img src="https://github-profile-trophy.vercel.app/?username=themagicalmammal&amp;theme=onestar&amp;row=1&amp;column=5" alt="trophy" />
       <br />
       <details>
          <summary> &#9655;</summary>
-         <h3><img src="https://i.imgur.com/4J40SKi.png" width="15" /> 𝗟𝗮𝘁𝗲𝘀𝘁 𝗕𝗹𝗼𝗴 𝗣𝗼𝘀𝘁 </h3>
+         <h3><img src="https://i.imgur.com/4J40SKi.png" width="15" /> Latest Blog Post </h3>
          <a href="[https://en.wikipedia.org/wiki/Cat](https://medium.com/@d19cyber)"><img alt="QRCode" src="https://medium-stats-q236lv7ba-dipanspotify.vercel.app/?username=d19cyber" /></a>
          <br />
          <details>
             <summary> &#9655;</summary>
-            <h3><img src="https://i.imgur.com/xGG5c7N.png" width="15" /> 𝗤𝗥 𝗖𝗼𝗱𝗲 </h3>
+            <h3><img src="https://i.imgur.com/xGG5c7N.png" width="15" /> QR Code </h3>
             <img alt="QRCode" width="200px" src="https://i.imgur.com/FS60AP0.png" />
             <br />
             <details>
                <summary> &#9655;</summary>
-               <h3><img src="https://i.imgur.com/1mimHIo.png" width="15" /> 𝗖𝗿𝗲𝗱𝗶𝘁𝘀 </h3>
+               <h3><img src="https://i.imgur.com/1mimHIo.png" width="15" /> Credits </h3>
                <ol>
                   <li><img src="https://cdn-icons-png.flaticon.com/128/197/197484.png" width="13" /> <a href="https://github.com/sourajitk">Sourajit Karmakar</a></li>
                   <li><img src="https://cdn-icons-png.flaticon.com/128/197/197564.png" width="13" /> <a href="https://github.com/thmsgbrt">Thomas Guibert</a></li>
@@ -66,12 +65,12 @@
                </ol>
                <details>
                   <summary> &#9655;</summary>
-                  <h3><img src="https://i.imgur.com/XJ0hI8P.png" width="15" /> 𝗩𝗶𝘀𝗶𝘁𝗼𝗿 </h3>
+                  <h3><img src="https://i.imgur.com/XJ0hI8P.png" width="15" /> Visitor </h3>
                   <img src="https://profile-counter.glitch.me/themagicalmammal/count.svg" />
                   <br /> 
                   <details>
                      <summary> &#9655;</summary>
-                     <h3><img src="https://i.imgur.com/E9Droaq.png" width="15" /> 𝗘𝗻𝗱 𝗖𝗿𝗲𝗱𝗶𝘁𝘀 </h3>
+                     <h3><img src="https://i.imgur.com/E9Droaq.png" width="15" /> End Credits </h3>
                      <div>
                         <img src="https://cultofthepartyparrot.com/parrots/hd/githubparrot.gif" width="30" height="30"/>
                         <img src="https://cultofthepartyparrot.com/flags/hd/indiaparrot.gif" width="30" height="30"/>
