--- a/main.mustache
+++ b/main.mustache
@@ -2,10 +2,7 @@
 <p>
    I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
    <img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
-<h3><img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Pics from <img src="https://i.imgur.com/DPngeUJ.png" width="11" /> London </h3>
-<p><img width="200" src="{{img1}}" /> <img width="200" src="{{img2}}" /> <img width="200" src="{{img3}}" /></p>
-<p> Above are the last 3 pictures posted by
-   <a href="https://www.instagram.com/london4visit/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" width="13" /> @london4visit</a>
+<h3><img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Weather in <img src="https://i.imgur.com/DPngeUJ.png" width="11" /> London </h3>
    <br /> Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i></b>
    <br /> Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>. 
 </p>
