--- a/main.mustache
+++ b/main.mustache
@@ -1,5 +1,5 @@
-<img href="https://themagicalmammal.wrapped.run" src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=135&text=Hello&animation=fadeIn&fontAlign=15&fontAlignY=40"/>
-<p>
+<img href="https://themagicalmammal.wrapped.run" src="/header.gif"/>
+<img href="https://themagicalmammal.wrapped.run" src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=f297c0&reversal=true&height=80"/>p>
    I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
    <img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
 <h3><img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Weather in London </h3>
@@ -75,4 +75,4 @@ Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i><
 </details>
 <br />
 <p><img src="https://i.imgur.com/JgaEjcz.png" width="11" /> <b> Last Refresh: </b> {{refresh_date}}</p>
-<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=timeGradient&reversal=true&height=80&section=footer"/>
+<img src="https://capsule-render-kusadtfih-dipanspotify.vercel.app/api?type=waving&color=f297c0&height=80&section=footer"/>
