--- a/main.mustache
+++ b/main.mustache
@@ -1,6 +1,7 @@
 <img href="https://themagicalmammal.wrapped.run" src="/images/header.gif"/>
    <p> I am Dipan, a Python Developer at <a href="https://www.etlsystems.com"> 
    <img src="https://i.imgur.com/wCpjNzM.png" width="13" /> ETL Systems </a> in <img src="https://i.imgur.com/DPngeUJ.png" width="13" /> <b>London, England</b>. 
+<img align="right" width="270" height="270" src="/images/octocat.gif">
 <h3><img src="https://i.imgur.com/HFHIBmx.png" width="15" /> Weather in London </h3>
 Currently, the weather is: <b> {{city_temperature}}°C, <i>{{city_weather}}</i></b>
 <br /> Today, the sun rises at <b>{{sun_rise}}</b> and sets at <b>{{sun_set}}</b>. 
